tests/ui/invalid-impls/invalid-impls.nightly.stderr
error[E0463]: can't find crate for `zerocopy`
  --> $DIR/invalid-impls/invalid-impls.rs:16:5
   |
16 | use zerocopy::*;
   |     ^^^^^^^^ can't find crate

error[E0404]: expected trait, found derive macro `TryFromBytes`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ not a trait
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:26:5
    |
 26 |     impl_or_verify!(T => TryFromBytes for Foo<T>);
    |     --------------------------------------------- in this macro invocation
    |
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0404]: expected trait, found derive macro `FromZeros`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ not a trait
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:27:5
    |
 27 |     impl_or_verify!(T => FromZeros for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0404]: expected trait, found derive macro `FromBytes`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ not a trait
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:28:5
    |
 28 |     impl_or_verify!(T => FromBytes for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0404]: expected trait, found derive macro `IntoBytes`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ not a trait
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:29:5
    |
 29 |     impl_or_verify!(T => IntoBytes for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0404]: expected trait, found derive macro `Unaligned`
   --> $DIR/invalid-impls/../../../src/util/macros.rs:413:29
    |
413 |             trait Subtrait: $trait {}
    |                             ^^^^^^ not a trait
    |
   ::: $DIR/invalid-impls/invalid-impls.rs:30:5
    |
 30 |     impl_or_verify!(T => Unaligned for Foo<T>);
    |     ------------------------------------------ in this macro invocation
    |
    = note: this error originates in the macro `impl_or_verify` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0404, E0463.
For more information about an error, try `rustc --explain E0404`.
